@@ -18,7 +18,7 @@ plugins { }
 
 allprojects {
     repositories {
-        /* mavenLocal() */
+        // mavenLocal()
         mavenCentral()
         google()
     }
@@ -33,31 +33,30 @@ allprojects.forEach {
     }
 }
 
-val ktlint by configurations.creating {
-    // https://github.com/pinterest/ktlint/issues/1114#issuecomment-805793163
-    attributes {
-        attribute(Bundling.BUNDLING_ATTRIBUTE, objects.named(Bundling.EXTERNAL))
-    }
-}
+val ktlint by configurations.creating
 val ktlintVersion: String by project
 
 dependencies {
-    ktlint("com.pinterest:ktlint:$ktlintVersion")
-    ktlint("com.pinterest.ktlint:ktlint-ruleset-standard:$ktlintVersion")
+    ktlint("com.pinterest.ktlint:ktlint-cli:$ktlintVersion") {
+        attributes {
+            attribute(Bundling.BUNDLING_ATTRIBUTE, objects.named(Bundling.EXTERNAL))
+        }
+    }
 }
 
-val lintPaths = listOf(
-    "**/*.kt",
-    // Exclude build output directories
-    "!**/build/**",
-    "!**/node_modules/**",
-    "!**/target/**",
-)
+val lintPaths =
+    listOf(
+        "**/*.kt",
+        // Exclude build output directories
+        "!**/build/**",
+        "!**/node_modules/**",
+        "!**/target/**",
+    )
 
 tasks.register<JavaExec>("ktlint") {
     description = "Check Kotlin code style."
-    group = "Verification"
-    classpath = configurations.getByName("ktlint")
+    group = LifecycleBasePlugin.VERIFICATION_GROUP
+    classpath = ktlint
     mainClass.set("com.pinterest.ktlint.Main")
     args = listOf("--log-level=info", "--relative", "--") + lintPaths
     // https://github.com/pinterest/ktlint/issues/1195#issuecomment-1009027802
@@ -66,10 +65,24 @@ tasks.register<JavaExec>("ktlint") {
 
 tasks.register<JavaExec>("ktlintFormat") {
     description = "Auto fix Kotlin code style violations"
-    group = "formatting"
-    classpath = configurations.getByName("ktlint")
+    group = LifecycleBasePlugin.VERIFICATION_GROUP
+    classpath = ktlint
     mainClass.set("com.pinterest.ktlint.Main")
     args = listOf("--log-level=info", "--relative", "--format", "--") + lintPaths
+    // https://github.com/pinterest/ktlint/issues/1195#issuecomment-1009027802
+    jvmArgs("--add-opens", "java.base/java.lang=ALL-UNNAMED")
+}
+
+tasks.register<JavaExec>("ktlintPreCommit") {
+    description = "Check Kotlin code style (for the pre-commit hooks)."
+    group = LifecycleBasePlugin.VERIFICATION_GROUP
+    classpath = ktlint
+    mainClass.set("com.pinterest.ktlint.Main")
+    args = listOf("--log-level=warn", "--color", "--relative", "--format", "--") +
+        System.getProperty("ktlintPreCommitArgs").let { args ->
+            check(args.isNotBlank()) { "need to pass in -DktlintPreCommitArgs=<some file paths to check>" }
+            args.split(" ")
+        }
     // https://github.com/pinterest/ktlint/issues/1195#issuecomment-1009027802
     jvmArgs("--add-opens", "java.base/java.lang=ALL-UNNAMED")
 }
